--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
                         Your Library
                     </h2>
                 </div>
+
+                <div class="songlist">
+                    <ul>
+                        <li>
+                            <img  class="invert music-icon" src="svg/music.svg" alt="">
+                            <div class="info">
+                                <div>Song Name</div>
+                                <div>Song Artist</div>
+                            </div>
+                            <div class="playnow">
+                                <span>Play Now</span>
+                                <img class="invert play-icon" src="svg/play.svg" alt="">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
                 <div class="footer">
                     <div><a href="https://www.spotify.com/jp/legal/"><span> Legal</span></a></div>
                     <div><a href="https://www.spotify.com/jp/privacy/"><span>Privacy</span></a></div>
@@ -77,16 +94,16 @@
                     </div>
                 </div>
                 <div class="playbar">
-                   <div class="songinfo">
+                    <div class="songinfo">
 
-                   </div>
+                    </div>
                     <div class="songbutton">
                         <img src="svg/prevsong.svg" alt="">
                         <img src="svg/play.svg" alt="">
                         <img src="svg/nextsong.svg" alt="">
                     </div>
                     <div class="songtime">
-                        
+
                     </div>
                 </div>
             </div>
