--- a/index.html
+++ b/index.html
@@ -29,17 +29,7 @@
 
                 <div class="songlist">
                     <ul>
-                        <li>
-                            <img  class="invert music-icon" src="svg/music.svg" alt="">
-                            <div class="info">
-                                <div>Song Name</div>
-                                <div>Song Artist</div>
-                            </div>
-                            <div class="playnow">
-                                <span>Play Now</span>
-                                <img class="invert play-icon" src="svg/play.svg" alt="">
-                            </div>
-                        </li>
+         
                     </ul>
                 </div>
 
@@ -94,6 +84,11 @@
                     </div>
                 </div>
                 <div class="playbar">
+                    <div class="seekbar">
+                        <div class="circle">
+                            
+                        </div>
+                    </div>
                     <div class="songinfo">
 
                     </div>
